--- a/app/scss/common/vars.scss
+++ b/app/scss/common/vars.scss
@@ -1,12 +1,8 @@
 $black: #000000;
-$OxfordBlue: #263238;
-$cello: #39515E;
-$manatee: #8F95A5;
-$HawkesBlue: #DADDE1;
-$WhiteSmoke: #F5F5F5;
+$black-100: #0B0614;
 $white: #FFFFFF;
-$Revell: #EEEEEE;
-$medium-dark: #546269;
+$grey-100: #0B0614;
+$orange-100: #FF5029;
 
 $md1: 1200px;
 $md2: 992px;
