--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,10 @@
 @import 'common/libs'; //библиотеки
 
 @import 'sections/header'; //хэдер
+@import 'sections/guide-card'; //карточка гида
+@import 'sections/work-proccess'; //как работает выбор гида
+@import 'sections/guide-registration'; //регистрация гидов
+@import 'sections/about-egypt'; //больше информации о Египте
 @import 'sections/footer'; // футер
 
 @import 'components/search-form'; //форма поиска
