--- a/app/scss/components/general-page.scss
+++ b/app/scss/components/general-page.scss
@@ -1,6 +1,4 @@
 .general-page {
-  margin-bottom: 190px;
-  
   &__container {
     padding: 15px;
     position: relative;
@@ -45,9 +43,55 @@
   }
 
   &__inner {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 24px;
+    margin: 0 15px;
+    max-width: 1240px;
+    width: 100%;
+    border-radius: 24px;
+    box-shadow: 0 30px 60px 0 rgba(198, 191, 191, 0.18);
+    background-color: $white;
     z-index: 6;
     left: 50%;
     bottom: -35px;
     transform: translateX(-51%);
+  }
+
+  &__text {
+    max-width: 570px;
+    width: 100%;
+    font-size: 40px;
+    line-height: 1.4;
+
+    span {
+      color: $orange-100;
+    }
+  }
+
+  &__tourists-list {
+    display: flex;
+    align-items: center;
+    justify-content: centers;
+  }
+
+  &__tourists-item {
+    color: rgba($color: $black-100, $alpha: 0.6);
+
+    &:not(:last-child) {
+      margin-left: -25px;
+    }
+
+    &:last-child {
+      max-width: 103px;
+      width: 100%;
+      margin-left: 16px;
+    }
+
+    span {
+      color: $orange-100;
+    }
   }
 }
